# qrscanner

./: .gitignore  Cargo.toml  com.belmoussaoui.qrscanner.Devel.json  com.belmoussaoui.qrscanner.json  meson.build
.github/workflows/: flatpak.yml
data/: com.belmoussaoui.qrscanner.appdata.xml.in  com.belmoussaoui.qrscanner.desktop.in  com.belmoussaoui.qrscanner.gschema.xml  com.belmoussaoui.qrscanner.gschema.xml.in  meson.build
data/resources/: qrscanner.gresource.xml  style.css
data/resources/ui/: qrcode_create.ui  qrcode_page.ui  window.ui
po/: POTFILES  meson.build
src/: application.rs  config.rs  main.rs  meson.build  qrcode.rs  qrscanner.gresource.xml  window.rs  window.ui
src/widgets/: camera.rs  mod.rs  qrcode.rs  window.rs
src/widgets/qrcode/: create.rs  mod.rs  page.rs  paintable.rs
