[package]
name = "qrscanner"
version = "0.1.0"
edition = "2018"

[dependencies]
gtk = {package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs"}
libhandy = {package = "libhandy4",  git = "https://gitlab.gnome.org/bilelmoussaoui/libhandy4-rs"}
gtk-macros = "0.2"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"
gettext-rs = {version = "0.5", features = ["gettext-system"]}
qrcode = "0.12"
