[package]
name = "qrscanner"
version = "0.1.0"
edition = "2018"

[dependencies]
gtk = {package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs"}
libhandy = {package = "libhandy4",  git = "https://gitlab.gnome.org/bilelmoussaoui/libhandy4-rs"}
gtk-macros = "0.2"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"
gettext-rs = {version = "0.5", features = ["gettext-system"]}
qrcode = "0.12"
gst_player = {package="gstreamer-player", git="https://gitlab.freedesktop.org/bilelmoussaoui/gstreamer-rs", branch="bilelmoussaoui/gst-player"}
gst_video = {package="gstreamer-video", git="https://gitlab.freedesktop.org/bilelmoussaoui/gstreamer-rs", branch="bilelmoussaoui/gst-player"}
gst_base = {package="gstreamer-base", git="https://gitlab.freedesktop.org/bilelmoussaoui/gstreamer-rs", branch="bilelmoussaoui/gst-player"}
gst = {package="gstreamer", git="https://gitlab.freedesktop.org/bilelmoussaoui/gstreamer-rs", branch="bilelmoussaoui/gst-player"}
